<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medicine.MedicinesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicineList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        android:contentDescription="@string/tab_medicine"
        android:paddingBottom="60dp"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_medicine"
        android:maxLines="2"
        android:text="@string/add_medicine"
        app:icon="@android:drawable/ic_menu_add" />

</FrameLayout>