...

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_advanced_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_settings"
            app:icon="@drawable/gear" />

        <TextView
...
